added ADC temperature sensor

--- a/demo_simple2/Objects/demo_simple.build_log.htm
+++ b/demo_simple2/Objects/demo_simple.build_log.htm
@@ -22,27 +22,15 @@ Dialog DLL:      TCM.DLL V1.14.14.0
  
 <h2>Project:</h2>
 C:\Users\alexandru.gaal\Documents\GitHub\workshop_utcn\demo_simple2\demo_simple.uvprojx
-Project File Date:  11/17/2016
+Project File Date:  11/21/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-compiling main.c...
-main.c(22): warning:  #177-D: variable "i" was declared but never referenced
-  	unsigned char i;
-main.c: 1 warning, 0 errors
-compiling led.c...
-compiling switch.c...
-compiling timer.c...
-timer.c(70): warning:  #550-D: variable "timer_value" was set but never used
-  	unsigned long timer_value=0;
-timer.c: 1 warning, 0 errors
-assembling startup_TM4C123.s...
-compiling display.c...
-compiling system_TM4C123.c...
+Build target 'Target 1'
+compiling sensor.c...
 linking...
-Program Size: Code=3772 RO-data=1900 RW-data=8 ZI-data=608  
-".\Objects\demo_simple.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=6752 RO-data=1900 RW-data=16 ZI-data=608  
+".\Objects\demo_simple.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -71,7 +59,7 @@ Package Vendor: Keil
       Include file:  Device\Include\TM4C123\TM4C123.h
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
