--- a/demo_simple2/Objects/demo_simple.build_log.htm
+++ b/demo_simple2/Objects/demo_simple.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.21.1.0
 Copyright (C) 2016 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Gaal Alexandru, none, LIC=----
+License Information: Gaal Alexandru, Home, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.21a
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+Toolchain Path:  F:\0_Tools\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 3 (build 300)
 Assembler:       Armasm.exe V5.06 update 3 (build 300)
 Linker/Locator:  ArmLink.exe V5.06 update 3 (build 300)
@@ -21,21 +21,21 @@ Target DLL:      lmidk-agdi.dll V???
 Dialog DLL:      TCM.DLL V1.14.14.0
  
 <h2>Project:</h2>
-C:\Users\alexandru.gaal\Documents\GitHub\workshop_utcn\demo_simple2\demo_simple.uvprojx
+F:\1_Projects\workshop_utcn\demo_simple2\demo_simple.uvprojx
 Project File Date:  11/21/2016
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 3 (build 300)', folder: 'F:\0_Tools\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling sensor.c...
+compiling switch.c...
 linking...
-Program Size: Code=6752 RO-data=1900 RW-data=16 ZI-data=608  
+Program Size: Code=6948 RO-data=1900 RW-data=24 ZI-data=608  
 ".\Objects\demo_simple.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.0.0-Beta4.pack
+                http://www.keil.com/pack/ARM.CMSIS.5.0.0-Beta12.pack
                 ARM::CMSIS:CORE:5.0.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
    * Component: CORE Version: 5.0.0
@@ -47,9 +47,9 @@ Package Vendor: Keil
    * Component: Startup Version: 1.0.1
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\alexandru.gaal\Documents\GitHub\workshop_utcn\demo_simple2\RTE
-  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0-Beta4\CMSIS\Include
-  C:\Keil_v5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
+  F:\1_Projects\workshop_utcn\demo_simple2\RTE
+  F:\0_Tools\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0-Beta12\CMSIS\Include
+  F:\0_Tools\Keil_v5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
 
 <h2>Collection of Component Files used:</h2>
 
@@ -59,7 +59,7 @@ Package Vendor: Keil
       Include file:  Device\Include\TM4C123\TM4C123.h
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
