--- a/demo_simple2/Objects/demo_simple.htm
+++ b/demo_simple2/Objects/demo_simple.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\demo_simple.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\demo_simple.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060300: Last Updated: Wed Nov 23 11:51:58 2016
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060300: Last Updated: Wed Nov 23 17:46:30 2016
 <BR><P>
 <H3>Maximum Stack Usage =         72 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -1551,6 +1551,7 @@ Global Symbols
 <P><STRONG><a name="[9c]"></a>PWMOutputState</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, pwm.o(i.PWMOutputState))
 <BR><BR>[Called By]<UL><LI><a href="#[bb]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RED_PWM_DutyCycle
 <LI><a href="#[9b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BLUE_PWM_DutyCycle
+<LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RGB_PWM_Init
 </UL>
 
 <P><STRONG><a name="[9f]"></a>PWMPulseWidthSet</STRONG> (Thumb, 32 bytes, Stack size 0 bytes, pwm.o(i.PWMPulseWidthSet))
@@ -1572,12 +1573,13 @@ Global Symbols
 <LI><a href="#[21]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;TIMER1A_Handler
 </UL>
 
-<P><STRONG><a name="[bc]"></a>RGB_PWM_Init</STRONG> (Thumb, 236 bytes, Stack size 16 bytes, led.o(i.RGB_PWM_Init))
+<P><STRONG><a name="[bc]"></a>RGB_PWM_Init</STRONG> (Thumb, 254 bytes, Stack size 16 bytes, led.o(i.RGB_PWM_Init))
 <BR><BR>[Stack]<UL><LI>Max Depth = 56<LI>Call Chain = RGB_PWM_Init &rArr; GPIOPinTypePWM &rArr; GPIOPadConfigSet
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysCtlPeripheralEnable
 <LI><a href="#[bd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysCtlPWMClockSet
 <LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;PWMPulseWidthSet
+<LI><a href="#[9c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;PWMOutputState
 <LI><a href="#[bf]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;PWMGenPeriodSet
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;PWMGenPeriodGet
 <LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;PWMGenEnable
@@ -1853,7 +1855,7 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Display_Init
 </UL>
 
-<P><STRONG><a name="[4f]"></a>WTIMER0A_Handler</STRONG> (Thumb, 112 bytes, Stack size 8 bytes, timer.o(i.WTIMER0A_Handler))
+<P><STRONG><a name="[4f]"></a>WTIMER0A_Handler</STRONG> (Thumb, 116 bytes, Stack size 8 bytes, timer.o(i.WTIMER0A_Handler))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = WTIMER0A_Handler &rArr; Display_Decimal &rArr;  Display_Decimal (Cycle)
 </UL>
 <BR>[Calls]<UL><LI><a href="#[db]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;TimerValueGet
@@ -1868,7 +1870,7 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_tm4c123.o(RESET)
 </UL>
-<P><STRONG><a name="[88]"></a>main</STRONG> (Thumb, 124 bytes, Stack size 16 bytes, main.o(i.main))
+<P><STRONG><a name="[88]"></a>main</STRONG> (Thumb, 128 bytes, Stack size 16 bytes, main.o(i.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 72<LI>Call Chain = main &rArr; RGB_PWM_Init &rArr; GPIOPinTypePWM &rArr; GPIOPadConfigSet
 </UL>
 <BR>[Calls]<UL><LI><a href="#[da]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;TIMER_Wide_0_Init
